2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Prefer libpq headers in $(includedir)/postgresql, if available.

	* libpq.c: If <postgresql/libpq-fe.h> is
	available, #include that instead of <libpq-fe.h>;
	likewise <postgresql/libpq/libpq-fs.h> over <libpq/libpq-fs.h>.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Don't use assignment expression as ‘SCM_OPFPORTP’ arg.

	* libpq.c (pg_print): Assign to local var
	‘curout’ first; then use it as ‘SCM_OPFPORTP’ arg.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] If necessary, #define SCM_{ROCHARS,ROLENGTH,ROUCHARS}.

	* gi.h [!SCM_ROCHARS] (SCM_ROCHARS): New #define.
	[!SCM_ROLENGTH] (SCM_ROLENGTH): Likewise.
	[!SCM_ROUCHARS] (SCM_ROUCHARS): Likewise.

2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme] Use ‘cons*’, not ‘list*’.

	Apparently, ‘list*’ is not cool enough for some Guile versions.

	* postgres-gxrepl.scm (defcc): Use ‘cons*’, not ‘list*’.

2011-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't clobber Makefile "user vars" ‘CPPFLAGS’, ‘LDFLAGS’.

	* Makefile.am (AM_CPPFLAGS, AM_LDFLAGS): New vars.
	(postgres_la_LDFLAGS): Add $(AM_LDFLAGS).
	(snarfcppopts): Add $(AM_CPPFLAGS).

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Decruft: Don't bother with ‘scm_gc_protect_object’.

	* gi.h (scm_protect_object): Delete #define.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use ‘AC_CHECK_DECLS’ for ‘scm_terminating’.

	* libpq.c: Throughout, replace ‘defined HAVE_SCM_TERMINATING’
	with ‘HAVE_DECL_SCM_TERMINATING’.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Use ‘__func__’ more.

	* libpq.c (lob_fill_input, lob_write): Use ‘__func__’.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Specify ‘ACLOCAL_AMFLAGS’ in Makefile.am.

	* Makefile.am (ACLOCAL_AMFLAGS): New var.

2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build install] Installed punified Scheme, sans ".scm" extension.
