@@ -1,3 +1,12 @@
+2011-06-04  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[C] Convert auto var ‘FUNC_NAME’ to #define.
+
+	This avoids "unused variable" warnings in newer Guile versions.
+
+	* libpq.c (lob_flush, lob_end_input, lob_seek, lob_fill_input)
+	(lob_write): #define FUNC_NAME internally; #undef too.
+
 2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[build] Prefer libpq headers in $(includedir)/postgresql, if available.
